test/tests/errors/error-class-is-null-need-object.sm
// true
// false
// false
/**/
/**/

program {
    output isNull(1);
}